--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,8 +9,9 @@ project.path = C:/Users/riozenc
 file.doc.path = /wms_file
 
 master.driverClassName=com.mysql.jdbc.Driver
-master.url=jdbc:mysql://47.92.88.159:3306/wms?characterEncoding=utf-8&useSSL=false
-master.username=wms
+#master.url=jdbc:mysql://47.92.88.159:3306/wms?characterEncoding=utf-8&useSSL=false
+master.url=jdbc:mysql://172.21.29.50:3306/wms?characterEncoding=utf-8&useSSL=false
+master.username=one
 master.password=df6100
 
 master.filters=wall,stat
